WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
320084
Fix css/css-overflow/line-clamp/block-ellipsis-007.html
https://bugs.webkit.org/show_bug.cgi?id=320084
Summary
Fix css/css-overflow/line-clamp/block-ellipsis-007.html
Rob Buis
Reported
2026-07-23 01:46:05 PDT
Fix css/css-overflow/line-clamp/block-ellipsis-007.html.
Attachments
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2026-07-23 02:14:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/70021
Radar WebKit Bug Importer
Comment 2
2026-07-30 01:47:11 PDT
<
rdar://problem/183606151
>
EWS
Comment 3
2026-08-02 23:25:41 PDT
Committed
318437@main
(99611a9b664e): <
https://commits.webkit.org/318437@main
> Reviewed commits have been landed. Closing PR #70021 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug