Style the block-overflow ellipsis based on the root block fc https://bugs.webkit.org/show_bug.cgi?id=320084 rdar://183606151

Reviewed by Alan Baradlay.

Style the block-overflow ellipsis based on the root block formatting context style instead of the first line style as per [1]:
"The block overflow ellipsis must not be included in either the ::first-letter nor the ::first-line pseudo-elements."

[1] https://drafts.csswg.org/css-overflow-4/#block-ellipsis

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/EllipsisBoxPainter.cpp:
(WebCore::EllipsisBoxPainter::paint):

Canonical link: https://commits.webkit.org/318437@main